<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff"
    tools:context=".ui.main.account.ChangePasswordFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:padding="16dp">

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            app:contentPadding="16dp"
            app:cardElevation="4dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/changePassword"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Change Password"
                    android:textAppearance="?attr/textAppearanceHeadline5"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toTopOf="@id/input_current_password_layout"
                    />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/input_current_password_layout"
                    style="@style/LoginTextInputLayoutStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    app:helperText="@string/current_password"
                    app:endIconMode="password_toggle"
                    app:layout_constraintBottom_toTopOf="@+id/input_new_password_layout"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/changePassword"
                    app:layout_constraintVertical_bias=".10"
                    app:layout_constraintVertical_chainStyle="packed">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/input_current_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:imeOptions="flagNoExtractUi"
                        android:inputType="textPassword"
                        android:textColor="#000"
                        android:textCursorDrawable="@null" />

                </com.google.android.material.textfield.TextInputLayout>


                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/input_new_password_layout"
                    style="@style/LoginTextInputLayoutStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    app:helperText="@string/new_password"
                    app:endIconMode="password_toggle"
                    app:layout_constraintBottom_toTopOf="@+id/input_confirm_new_password_layout"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/input_current_password_layout">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/input_new_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:imeOptions="flagNoExtractUi"
                        android:inputType="textPassword"
                        android:textColor="#000"
                        android:textCursorDrawable="@null" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/input_confirm_new_password_layout"
                    style="@style/LoginTextInputLayoutStyle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    app:helperText="@string/confirm_new_password"
                    app:endIconMode="password_toggle"
                    app:layout_constraintBottom_toTopOf="@+id/update_password_button"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/input_new_password_layout">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/input_confirm_new_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:imeOptions="flagNoExtractUi"
                        android:inputType="textPassword"
                        android:textColor="#000"
                        android:textCursorDrawable="@null" />

                </com.google.android.material.textfield.TextInputLayout>


                <com.google.android.material.button.MaterialButton
                    android:id="@+id/update_password_button"
                    style="@style/BlueOutlineButton"
                    android:layout_width="0dp"
                    android:layout_height="55dp"
                    android:layout_marginTop="30dp"
                    android:layout_marginBottom="30dp"
                    android:text="@string/update_password"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/input_confirm_new_password_layout"
                    />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </com.google.android.material.card.MaterialCardView>

    </androidx.constraintlayout.widget.ConstraintLayout>


</ScrollView>